Remove Curios API support as it will be replaced later

--- a/src/main/resources/assets/grimms/lang/en_us.json
+++ b/src/main/resources/assets/grimms/lang/en_us.json
@@ -50,10 +50,10 @@
   "item.grimms.soda_bottle": "Soda Bottle",
   "item.grimms.photograph_of_motorcar": "Photograph Of Motorcar",
   "item.grimms.variable_pressure_tank": "Variable Pressure Tank",
-  "gui.grimms.key_gui.label_set_password": "Set Password",
   "item.grimms.long_sword": "Long Sword",
-  "advancements.prank_em_john.descr": "Metal pipe go bonk!",
+  "gui.grimms.key_gui.label_set_password": "Set Password",
   "item.grimms.faulty_necromancers_wand": "Faulty Necromancers Wand",
+  "advancements.prank_em_john.descr": "Metal pipe go bonk!",
   "advancements.comrade.title": "Comrade",
   "trim_material.grimms.iridium_trim": "Iridium",
   "item.grimms.lead_ingot": "Lead",
@@ -70,7 +70,6 @@
   "trim_material.grimms.tungsten_carbide_trim": "Tungsten Carbide",
   "key.categories.grimmsmod": "Grimm\u0027s Mod Keybinds",
   "gui.grimms.tv_liquidator_gui.label_liquidate": "Liquidate",
-  "curios.identifier.stick_o_crafting_slot": "Stick O Crafting Slot",
   "block.grimms.uranium_ore": "Uranium Ore",
   "advancements.level_up_2.descr": "Level up to level 35",
   "advancements.subpar_hammeration.title": "Subpar Hammeration",
@@ -245,7 +244,7 @@
   "advancements.serious_hammeration.title": "Serious Hammeration",
   "item.grimms.lock_and_key": "Lock And Key",
   "item.grimms.written_paper": "Written Paper",
-  "item.grimms.stick_o_crafting": "Stick O\u0027 Crafting",
+  "item.grimms.stick_o_crafting": "Stick \u0027O Crafting",
   "advancements.prestige.descr": "Prestige for the first time for special benefits!",
   "trim_material.grimms.galvanized_steel_trim": "Galvanized Steel",
   "item.grimms.iridium_screw": "Iridium Screw",
