--- a/src/main/resources/assets/grimms/lang/en_us.json
+++ b/src/main/resources/assets/grimms/lang/en_us.json
@@ -14,15 +14,18 @@
   "item.grimms.resistor": "Resistor",
   "advancements.heavy_duty.title": "Heavy Duty",
   "item.grimms.lockpick": "Lockpick",
+  "gamerule.enableMixing": "Enable Mixing",
   "advancements.murderer.descr": "Kill a fellow player",
+  "gamerule.invulnerablityTicks.description": "Lenght of invulnerablity for entities in ticks",
   "item.grimms.interdimensional_trapezoid": "Interdimensional Trapezoid",
   "item.grimmsmod.builders_wand": "Builders Wand",
+  "gamerule.enableTempenture": "Enable Tempenture",
   "advancements.level_up.descr": "Level up for the first time",
   "advancements.little_timmy.title": "Little Timmy",
   "gui.grimms.transmutation_gui.label_liquidate_item": "Liquidate Item",
   "effect.grimms.bleeding": "Bleeding",
-  "item.grimms.debug_wand": "Debug Wand",
   "item.grimms.tin_ingot": "Tin",
+  "item.grimms.debug_wand": "Debug Wand",
   "block.grimms.loot_crate": "Loot Crate",
   "block.grimms.distillery": "Distillery",
   "block.grimms.lead_block": "Block of Lead",
@@ -70,13 +73,16 @@
   "trim_material.grimms.tungsten_carbide_trim": "Tungsten Carbide",
   "key.categories.grimmsmod": "Grimm\u0027s Mod Keybinds",
   "gui.grimms.tv_liquidator_gui.label_liquidate": "Liquidate",
+  "gamerule.enableThirst": "Enable Thirst",
   "block.grimms.uranium_ore": "Uranium Ore",
+  "gamerule.rotTime.description": "Rot time of food as ticks, tihs is multipilied my food value + saturation",
   "advancements.level_up_2.descr": "Level up to level 35",
   "advancements.subpar_hammeration.title": "Subpar Hammeration",
   "item.grimms.tempered_steel": "Tempered Steel",
   "advancements.superior_backpack.title": "Superior Backpack",
   "gui.grimms.math_exam_gui.answer": "Answer here",
   "block.grimms.tungsten_block": "Block of Tungsten",
+  "gamerule.enableThirst.description": "Enables the thirst mechanic",
   "advancements.millionare.descr": "Have $1M",
   "item.grimms.clean_bone": "Clean Bone",
   "item.grimms.iridium_hammer": "Iridium Hammer",
@@ -97,7 +103,9 @@
   "item.grimms.backpack_t_2": "Backpack T 2",
   "gui.grimms.prestige_upgrades_gui.sid": "0",
   "item.grimms.backpack_t_3": "Backpack T3",
+  "gamerule.enableTempenture.description": "Enables the tempenture mechanic",
   "item.grimms.heating_element": "Heating Element",
+  "gamerule.rotTime": "Rot time",
   "item.grimms.plutonium_ingot": "Plutonium",
   "item.grimms.dosimeter": "Dosimeter",
   "enchantment.grimms.sharp": "Sharp",
@@ -120,12 +128,14 @@
   "gui.grimms.stats_gui.label_empty": "/",
   "item_group.grimmsmod.grimms_mod_special": "Grimms Mod Special",
   "gui.grimmsmod.stats_gui.label_empty": "/",
+  "gamerule.enableRotting": "Enable food rotting",
   "item.grimms.tungsten_carbide_screw": "Tungsten Carbide Screw",
   "item.grimms.pullup_tab": "Pullup Tab",
   "item.grimmsmod.microscope": "Microscope",
   "advancements.victim.title": "Victim",
   "gui.grimms.math_exam_gui.button_submit": "Submit",
   "trim_material.grimms.tungsten_trim": "Tungsten",
+  "gamerule.itemXPMultipilier.description": "Calculated with level * xpmult",
   "gui.grimms.transmutation_gui.itemid": "Item registry name",
   "item.grimms.gold_screw": "Gold Screw",
   "gui.grimms.forgery_table_gui.button_forge": "Forge",
@@ -153,12 +163,14 @@
   "block.grimms.tin_block": "Block of Tin",
   "enchantment.grimms.xp_boost": "Xp Boost",
   "death.attack.item_level_damage_boost": "%1$s died",
+  "gamerule.enableMixing.description": "Enables alloying of materials",
   "item.grimms.heavy_metal_pipe": "Heavy Metal Pipe",
   "item.grimms.galvanized_screw": "Galvanized Screw",
   "gui.grimms.stats_gui.label_empty1": "/",
   "block.grimms.refinery": "Refinery",
   "advancements.billionare.descr": "Have $1B",
   "advancements.prank_em_john.title": "Prank Em\u0027 John",
+  "gamerule.radiationLimit.description": "Maxixmum amount of rads a player can have before consequences",
   "gui.grimms.transmutation_gui.label_tv": "TV:",
   "gui.grimms.refinery_gui.label_blaze_powder": "\u003c\u003d\u003d Blaze Powder",
   "item.grimms.despawn_wand": "Despawn Wand",
@@ -169,6 +181,7 @@
   "item.grimms.full_tin_can": "Full Tin Can",
   "item.grimms.metal_pipe": "Metal Pipe",
   "item.grimms.iridium_ingot": "Iridium",
+  "gamerule.itemXPExponent": "Item XP Exponent",
   "item.grimms.disinfectant_scalpel": "Disinfectant Scalpel",
   "gui.grimms.development_chamber_gui.label_put_thrash_here_to_develop_it": "Put thrash here to.. develop it?",
   "item.grimms.volt_meter": "Volt Meter",
@@ -185,6 +198,7 @@
   "item.grimms.mail": "Mail",
   "block.grimms.tungsten_ore": "Tungsten Ore",
   "gui.grimms.written_paper_gui.papertext": "N/A",
+  "gamerule.enableRadiation": "Enable radiation",
   "item.grimms.logo": "Logo",
   "block.grimms.thorium_block": "Block of Thorium",
   "item.grimms.error": "Error",
@@ -220,6 +234,7 @@
   "item.grimms.math_exam": "Math Exam",
   "gui.grimms.stats_gui.button_stats": "Stats",
   "death.attack.radiation_damage_type.player": "%1$s got too irradiated whilst trying to escape %2$s",
+  "gamerule.itemXPMultipilier": "Item XP Multipilier",
   "item.grimms.placeholder": "Placeholder",
   "item.grimms.builders_wand": "Builders Wand",
   "gui.grimms.stats_gui.label_prestige": "Prestige",
@@ -229,12 +244,15 @@
   "effect.grimms.dizziness": "Dizziness",
   "block.grimms.lead_ore": "Lead Ore",
   "block.grimms.heavy_blaster": "Heavy Blaster",
+  "gamerule.radiationLimit": "Radiation Limit",
   "block.grimms.silver_ore": "Silver Ore",
   "item.grimms.valve": "Valve",
   "item.grimms.composite_gem": "Composite Gem",
+  "gamerule.invulnerablityTicks": "Lenght of invulnerablity",
   "gui.grimms.prestige_upgrades_gui.prestigeupgradeid": "N/A",
   "item.grimms.charred_bone": "Charred Bone",
   "key.grimms.open_stats": "Open Stats",
+  "gamerule.itemXPExponent.description": "Calculated with (level * xpmult) ^ (xpexpo/10)",
   "item.grimms.rotten_food": "Rotten Food",
   "advancements.little_timmy.descr": "Get a perfect math exam score",
   "item.grimms.death_package": "Death Package",
@@ -252,5 +270,7 @@
   "death.attack.radiation_damage_type": "%1$s got too irradiated.",
   "item.grimms.steel": "Steel",
   "item.grimmsmod.logo": "Logo",
+  "gamerule.enableRadiation.description": "Enables the radiation mechanic ingame",
+  "gamerule.enableRotting.description": "Enables the rotting mechanic for foods",
   "advancements.install_grimms_mod.title": "Install Grimm\u0027s Mod"
 }
