--- a/src/main/resources/assets/grimms/lang/en_us.json
+++ b/src/main/resources/assets/grimms/lang/en_us.json
@@ -24,8 +24,8 @@
   "advancements.little_timmy.title": "Little Timmy",
   "gui.grimms.transmutation_gui.label_liquidate_item": "Liquidate Item",
   "effect.grimms.bleeding": "Bleeding",
-  "item.grimms.tin_ingot": "Tin",
   "item.grimms.debug_wand": "Debug Wand",
+  "item.grimms.tin_ingot": "Tin",
   "block.grimms.loot_crate": "Loot Crate",
   "block.grimms.distillery": "Distillery",
   "block.grimms.lead_block": "Block of Lead",
@@ -53,10 +53,10 @@
   "item.grimms.soda_bottle": "Soda Bottle",
   "item.grimms.photograph_of_motorcar": "Photograph Of Motorcar",
   "item.grimms.variable_pressure_tank": "Variable Pressure Tank",
-  "gui.grimms.key_gui.label_set_password": "Set Password",
   "item.grimms.long_sword": "Long Sword",
-  "advancements.prank_em_john.descr": "Metal pipe go bonk!",
+  "gui.grimms.key_gui.label_set_password": "Set Password",
   "item.grimms.faulty_necromancers_wand": "Faulty Necromancers Wand",
+  "advancements.prank_em_john.descr": "Metal pipe go bonk!",
   "advancements.comrade.title": "Comrade",
   "trim_material.grimms.iridium_trim": "Iridium",
   "item.grimms.lead_ingot": "Lead",
@@ -255,7 +255,7 @@
   "gamerule.itemXPExponent.description": "Calculated with (level * xpmult) ^ (xpexpo/10)",
   "item.grimms.rotten_food": "Rotten Food",
   "advancements.little_timmy.descr": "Get a perfect math exam score",
-  "item.grimms.death_package": "Death Package",
+  "item.grimms.death_package": "Placeholder",
   "block.grimms.forgery_table": "Forgery Table",
   "item.grimms.silver_ingot": "Silver",
   "advancements.heavy_duty.descr": "That\u0027s some serious leg power to carry all that!",
