Add gravestone mechanic, fix some things, cleanup

--- a/src/main/resources/assets/grimms/lang/en_us.json
+++ b/src/main/resources/assets/grimms/lang/en_us.json
@@ -17,11 +17,13 @@
   "gamerule.enableMixing": "Enable Mixing",
   "advancements.murderer.descr": "Kill a fellow player",
   "gamerule.invulnerablityTicks.description": "Lenght of invulnerablity for entities in ticks",
+  "gamerule.shoutLevel": "Shout LevelUp",
   "item.grimms.interdimensional_trapezoid": "Interdimensional Trapezoid",
   "item.grimmsmod.builders_wand": "Builders Wand",
   "gamerule.enableTempenture": "Enable Tempenture",
   "advancements.level_up.descr": "Level up for the first time",
   "advancements.little_timmy.title": "Little Timmy",
+  "gamerule.enableMobGraves.description": "Enables grave\u0027s for non-player entities",
   "gui.grimms.transmutation_gui.label_liquidate_item": "Liquidate Item",
   "effect.grimms.bleeding": "Bleeding",
   "item.grimms.debug_wand": "Debug Wand",
@@ -44,6 +46,7 @@
   "advancements.little_john.title": "Little John",
   "item.grimms.copper_wire": "Copper Wire",
   "advancements.rich_guy.title": "Rich Guy",
+  "block.grimms.basic_grave": "Basic Grave",
   "trim_material.grimms.lead_trim": "Lead",
   "death.attack.radiation_damage_type.item": "%1$s was irradiated by %2$s using %3$s",
   "item.grimms.champagne_bottle": "Champagne Bottle",
@@ -90,6 +93,7 @@
   "gui.grimms.stats_gui.button_prestige": "Prestige",
   "gui.grimms.written_paper_gui.label_text": "Text",
   "block.grimms.basic_cobblestone_generator": "Basic Cobblestone Generator",
+  "gamerule.enableMobGraves": "Enable mob graves",
   "gui.grimms.statistics_gui.label_map": "Map",
   "advancements.install_grimms_mod.descr": "Install Grimm\u0027s Mod on minecraft, reworked, remade, updated",
   "item.grimms.multi_use_scalpel": "Multi Use Scalpel",
@@ -130,6 +134,7 @@
   "gui.grimmsmod.stats_gui.label_empty": "/",
   "gamerule.enableRotting": "Enable food rotting",
   "item.grimms.tungsten_carbide_screw": "Tungsten Carbide Screw",
+  "gamerule.shoutLevel.description": "Sends chat message to all players when someone reaches a multiple of \u003cvalue\u003e in levels",
   "item.grimms.pullup_tab": "Pullup Tab",
   "item.grimmsmod.microscope": "Microscope",
   "advancements.victim.title": "Victim",
@@ -139,6 +144,7 @@
   "gui.grimms.transmutation_gui.itemid": "Item registry name",
   "item.grimms.gold_screw": "Gold Screw",
   "gui.grimms.forgery_table_gui.button_forge": "Forge",
+  "gamerule.shoutPrestige.description": "Sends chat message to all players when someone prestiges.",
   "advancements.transmuter.title": "Transmuter",
   "death.attack.bleeding_damage.player": "%1$s lost too much blood whilst trying to escape %2$s",
   "gui.grimmsmod.stats_gui.label_empty1": "/",
@@ -200,6 +206,7 @@
   "gui.grimms.written_paper_gui.papertext": "N/A",
   "gamerule.enableRadiation": "Enable radiation",
   "item.grimms.logo": "Logo",
+  "gamerule.disableGraveSpawning": "Disable grave spawning",
   "block.grimms.thorium_block": "Block of Thorium",
   "item.grimms.error": "Error",
   "subtitles.metalpipehit": "Ow my ear hurt",
@@ -210,6 +217,7 @@
   "gui.grimms.stats_gui.label_level": "Level",
   "item_group.grimmsmod.grimms_mod": "Grimm\u0027s Mod",
   "advancements.transmuter.descr": "Have 1K TV",
+  "gamerule.disableGraveSpawning.description": "Disables the spawning of grave\u0027s when players die",
   "item.grimmsmod.placeholder": "Placeholder",
   "item.grimms.soda_bottle_2": "Soda Bottle 2",
   "item.grimms.mortar_and_pestle": "Mortar And Pestle",
@@ -241,6 +249,7 @@
   "enchantment.grimms.soulbound": "Soulbound",
   "gui.grimms.stats_gui.button_open_prestige_upgrades": "Open Prestige Upgrades",
   "block.grimms.development_chamber": "Mark IX Methane Generator",
+  "gamerule.shoutPrestige": "Shout on prestige",
   "effect.grimms.dizziness": "Dizziness",
   "block.grimms.lead_ore": "Lead Ore",
   "block.grimms.heavy_blaster": "Heavy Blaster",
